<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/picture"
        android:layout_width="386dp"
        android:layout_height="278dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/picture_description"
        android:src="@drawable/multicolor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one_color_button_id" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047" />

    <Button
        android:id="@+id/gray_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gray_button"
        app:layout_constraintBottom_toTopOf="@+id/picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/saturation_less_button_id"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.589" />

    <Button
        android:id="@+id/random_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/random_button"
        app:layout_constraintBottom_toTopOf="@+id/picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.381" />

    <Button
        android:id="@+id/reset_c_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:text="@string/reset_c_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/picture" />

    <Button
        android:id="@+id/one_color_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one_color_button"
        app:layout_constraintBottom_toTopOf="@+id/picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/saturation_more_button_id"
        app:layout_constraintTop_toBottomOf="@+id/gray_button_id"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/saturation_less_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saturation_less_button"
        app:layout_constraintBottom_toTopOf="@+id/picture"
        app:layout_constraintEnd_toStartOf="@+id/gray_button_id"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/random_button_id"
        app:layout_constraintVertical_bias="0.166" />

    <Button
        android:id="@+id/saturation_more_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saturation_more_button"
        app:layout_constraintBottom_toTopOf="@+id/picture"
        app:layout_constraintEnd_toStartOf="@+id/one_color_button_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saturation_less_button_id"
        app:layout_constraintVertical_bias="0.157" />

    <Button
        android:id="@+id/contrast_more_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contrast_more_button"
        app:layout_constraintBottom_toTopOf="@+id/gray_button_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.802" />


</androidx.constraintlayout.widget.ConstraintLayout>